--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,14 +31,14 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        golangci_lint: [v1.42]
+        golangci_lint: [v1.52]
     steps:
-      - uses: actions/checkout@v2.3.4
+      - uses: actions/checkout@v3.4.0
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v2.5.2
+        uses: golangci/golangci-lint-action@v3.4.0
         with:
           version: ${{ matrix.golangci_lint }}
-          # github-token: ${{ secrets.GITHUB_TOKEN }}
+          #github-token: ${{ secrets.GITHUB_TOKEN }}
           args: --timeout=2m
           only-new-issues: false
           working-directory: .
@@ -47,11 +47,11 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        golang: [1.17.x]
+        golang: [1.19.x]
     steps:
-      - uses: actions/checkout@v2.3.4
+      - uses: actions/checkout@v3.4.0
       - name: Install Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.golang }}
       - name: Run tests on Windows
@@ -62,17 +62,17 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        golang: [1.17.x]
+        golang: [1.19.x]
     env:
       OS: macos-latest
       GOLANG: ${{ matrix.golang }}
     steps:
-      - uses: actions/checkout@v2.3.4
+      - uses: actions/checkout@v3.4.0
       - name: Install Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.golang }}
-      - uses: actions/cache@v2.1.6
+      - uses: actions/cache@v3.3.1
         with:
           path: ~/go/pkg/mod
           key: ${{ runner.os }}-go-${{ matrix.golang }}-v1-${{ hashFiles('**/go.sum') }}
@@ -85,9 +85,9 @@ jobs:
           git --no-pager diff go.mod go.sum
           git --no-pager diff --quiet go.mod go.sum
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v2.0.2
+        uses: codecov/codecov-action@v3.1.1
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+          #token: ${{ secrets.CODECOV_TOKEN }}
           file: ./coverage.txt
           flags: unittests
           env_vars: OS,GOLANG
@@ -99,17 +99,17 @@ jobs:
     strategy:
       matrix:
         golang:
-          - 1.17.x
+          - 1.19.x
     env:
       OS: ubuntu-latest
       GOLANG: ${{ matrix.golang }}
     steps:
-      - uses: actions/checkout@v2.3.4
+      - uses: actions/checkout@v3.4.0
       - name: Install Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.golang }}
-      - uses: actions/cache@v2.1.6
+      - uses: actions/cache@v3.3.1
         with:
           path: ~/go/pkg/mod
           key: ${{ runner.os }}-go-${{ matrix.golang }}-v1-${{ hashFiles('**/go.sum') }}
@@ -122,9 +122,9 @@ jobs:
       - name: Run tests on Unix-like operating systems
         run: make unittest
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v2.0.2
+        uses: codecov/codecov-action@v3.1.1
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+          #token: ${{ secrets.CODECOV_TOKEN }}
           file: ./coverage.txt
           flags: unittests
           env_vars: OS,GOLANG
