--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,16 +9,11 @@ jobs:
   release:
     name: releaser
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        golang: [1.17.x]
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2.3.4
+      - uses: actions/checkout@v4
       - name: Unshallow
         run: git fetch --prune --unshallow
       - name: Run Semantic Release
-        id: semantic
-        uses: docker://ghcr.io/codfish/semantic-release-action:v1
+        uses: codfish/semantic-release-action@v3
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
